manifest.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: m
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-pv-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
      - name: postgres
        image: postgres:latest
        ports:
          - containerPort: 5432
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
              - mountPath: "/var/lib/postgresql/data"
                name: postgres-pv-storage

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: m
spec:
 type: ClusterIP
 ports:
  - name: postgres
    port: 5432
    targetPort: 5432
 selector:
   app: postgres

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: userapp
  name: userapp
  namespace: m
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userapp
  template:
    metadata:
      labels:
        app: userapp
    spec:
      containers:
      - name: userapp
        image: docker.io/widedreadnout/otus-microservice-user
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: secrets
            mountPath: /app/secrets
            readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: secret-appsettings

---

apiVersion: v1
kind: Service
metadata:
  name: userapp-service
  namespace: m

spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: userapp
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userapp-ingress
  namespace: m
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: userapp-service
              port:
                number: 80
